--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ android {
     }
 
     dataBinding.enabled = true
+    sourceSets.test.resources.srcDirs += ["src/test/resources"]
+
 }
 
 dependencies {
