--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$dependencies.supportLibrary"
+    implementation "com.android.support:recyclerview-v7:$dependencies.supportLibrary"
     implementation "com.android.support.constraint:constraint-layout:$dependencies.constraintLayout"
     implementation "com.fasterxml.jackson.core:jackson-databind:$dependencies.jackson"
 
